--- a/DotnetWhoisCLI/DotnetWhoisCLI.csproj
+++ b/DotnetWhoisCLI/DotnetWhoisCLI.csproj
@@ -17,6 +17,9 @@
 		<RepositoryUrl>https://github.com/cempehlivan/dotnet-whois-cli</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>icon.jpg</PackageIcon>
+		<AssemblyVersion>1.1.0</AssemblyVersion>
+		<FileVersion>1.1.0</FileVersion>
+		<Version>1.1.0</Version>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Include="..\icon.jpg">
